# cuda_ckks

./: CMakeLists.txt  README.md
benchmark/: Benchmark.cpp
include/public/: Ciphertext.h  Context.h  MultPtxtBatch.h  Test.h
src/public/: Context.cu  MultPtxtBatch.cu
unittest/: CMakeLists.txt
